--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,36 @@
 <idea-plugin>
-	<id>jbehave-create-step-definition</id>
-	<name>JBehave create step definition</name>
+	<id>intellij-fnox-utilities</id>
+	<name>IntelliJ Fortnox utilities</name>
 	<vendor email="jesper.holmstrom@fortnox.se">j-holmstrom</vendor>
 
-	<description>Alt+Enter on a step in a story file to create step definition</description>
+	<description>
+		<![CDATA[
+		<p>
+		This plugin is intended to help with mundane tasks we often do on Fortnox.<br>
+		Right now there are not alot of features. If you have an idea about what could be added DM me on Slack @ Jesper Holmström
+		</p>
+
+		<p>
+			<strong>Setup (for generating auth headers):</strong>
+			<ul>
+				<li>
+					Go to Settings > Tools > Fortnox utility settings and enter your default tenantId and userId to be used when generating auth headers.
+				</li>
+			</ul>
+		</p>
+		<p>
+			<strong>Features:</strong>
+			<ul>
+				<li>
+					Alt+Enter on a step in a story file to create step definition.
+				</li>
+				<li>
+					Alt+Enter in a .http file to generate auth headers for internalapi requests.
+				</li>
+			</ul>
+	    </p>
+		]]>
+	</description>
 
 	<extensions defaultExtensionNs="com.intellij">
 		<intentionAction>
@@ -12,6 +39,9 @@
 
 		<intentionAction>
 			<className>se.fortnox.intellij.internalauthhelper.GenerateAuthIntention</className>
+		</intentionAction>
+		<intentionAction>
+			<className>se.fortnox.intellij.internalauthhelper.GenerateAuthIntentionProd</className>
 		</intentionAction>
 
 		<applicationService serviceImplementation="se.fortnox.intellij.PluginSettingsState"/>
